--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -12,6 +12,8 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "express-ejs-layouts": "^2.4.0",
+    "mongoose": "^5.1.6",
     "monk": "^6.0.6",
     "morgan": "~1.9.0",
     "serialport": "^6.2.0",
