--- a/package.json
+++ b/package.json
@@ -6,19 +6,29 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
+    "crypto.js": "^1.1.0",
     "dateformat": "^3.0.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-ejs-layouts": "^2.4.0",
+    "express-session": "^1.15.6",
     "mongoose": "^5.1.6",
     "monk": "^6.0.6",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "serialport": "^6.2.0",
     "serve-favicon": "~2.4.5",
     "should": "^13.2.1",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "uuid": "^3.2.1",
+    "uuid-v4": "^0.1.0"
   }
 }
